# isrene

./: .gitignore  .pre-commit-config.yaml  CITATION.cff  LICENSE  README.md  pyproject.toml  tox.ini
.github/workflows/: ci.yaml
examples/: atp_hydrolysis_mass_action.ipynb  cycle.ipynb  example_state_transfer.ipynb
isrene/: __init__.py  sum_formula.py
isrene/mid/: correction.py
isrene/model_definition/: __init__.py  model_definition.py  model_definition_hl.py  model_definition_rate_laws.py  model_export_sbml.py  observables.py
isrene/sbml/: __init__.py  annotations.py  sbml_pint.py  sbml_wrappers.py
isrene/sbml_multi/: __init__.py  sbml_multi_expand.py  sbml_multi_wrappers.py
tests/: run-notebooks.sh  test_mid.py  test_sum_formula.py
tests/model_definition/: test_model_definition.py  test_model_export.py  test_rate_laws.py
tests/sbml/: test_sbml_pint.py  test_sbml_wrappers.py
tests/sbml_multi/: test_expand_multi.py  test_sbml_multi_wrappers.py
